js&css/extension/www.youtube.com/appearance/sidebar/sidebar.css
/* ... */
html[it-related-videos='Titles'] #related #dismissible:not(.ytd-reel-item-renderer) {opacity:0.8;  max-height:40px; overflow:hidden; margin-top:-1px;  transition: max-height 0.3s ease 0.1s;}
html[it-related-videos='Titles'] #related #dismissible:not(.ytd-reel-item-renderer) ytd-thumbnail {max-width: 0px; transition: max-width 0.4s ease 0.1s;}
html[it-related-videos='Titles'] #related #dismissible:not(.ytd-reel-item-renderer) ytd-playlist-thumbnail {max-width: 0px; transition: max-width 0.4s ease 0.1s;}
html[it-related-videos='Titles'] #related #dismissible:hover:not(.ytd-reel-item-renderer) {opacity: 1;  max-height: 100px; transition: max-height 0.3s ease 0.9s; margin-left: 0px !important}
html[it-related-videos='Titles'] #related #dismissible:hover:not(.ytd-reel-item-renderer) ytd-thumbnail {max-width: 170px; transform:scale(1); transition: max-width 0.3s ease 0.9s;}
html[it-related-videos='Titles'] #related #dismissible:hover:not(.ytd-reel-item-renderer) ytd-playlist-thumbnail {max-width: 170px; transform:scale(1); transition: max-width 0.3s ease 0.9s;}
html[it-related-videos='Titles'] #related #dismissible #metadata {margin-top:-3px;}
/* timestamps..? html[it-related-videos='Titles'] #overlays {margin-right:100px; margin-bottom:50px; opacity: 1 !important; visiblity: visible !important;} */
/* html[it-related-videos='Titles'] #related #dismissible #metadata * {display: inline-block !important}
*/

/*--------------------------------------------------------------
# SHORTS REMIXING THIS VIDEO
--------------------------------------------------------------*/
html[it-hide-shorts-remixing='true'] #related ytd-reel-shelf-renderer,
/*--------------------------------------------------------------
# HIDE THUMBNAILS
--------------------------------------------------------------*/
html[it-thumbnails-hide='true'] ytd-watch-next-secondary-results-renderer ytd-thumbnail,
html[it-thumbnails-hide='true'] ytd-watch-next-secondary-results-renderer ytd-playlist-thumbnail,
/*update Aug 22th 2025 by @JadonDn:*/ html[it-thumbnails-hide='true'] ytd-watch-next-secondary-results-renderer .yt-lockup-view-model-wiz__content-image,
/*--------------------------------------------------------------
# LIVECHAT
--------------------------------------------------------------*/
html[it-livechat='hidden'] ytd-live-chat-frame#chat {
	  display: none !important;
}
html[it-livechat='collapsed'] #chat-container:not([it-activated])::before {
	content: 'Show live chat' !important;
}

html[it-livechat='collapsed'] #chat-container[it-activated]::before {
	content: 'Collapse live chat' !important;
}

html[it-livechat='collapsed'] #chat-container::before {
	font-family: inherit !important;
	font-size: 1.6rem !important;
	font-weight: 400 !important;

	display: flex !important;

	width: 100% !important;
	height: 48px !important;
	margin: 0 !important;

	color: var(--yt-spec-text-primary) !important;
	border-bottom: 1px solid var(--yt-spec-10-percent-layer) !important;

	justify-content: center !important;
	align-items: center !important;
}

html[it-livechat='collapsed'] #chat-container:not([it-activated]) > ytd-live-chat-frame#chat {
	display: none !important;
}

html[it-livechat='collapsed'][it-livechat='hidden'] ytd-live-chat-frame#chat {
  display: none !important;
}

html[it-livechat='collapsed'] 
#chat-container:not([it-activated])::before, 
#chat-container[it-activated]::before {
	background-color: #272727 !important;
	border-radius: 8px !important;
	cursor: pointer;
}


/*--------------------------------------------------------------
# HIDE PLAYLIST
--------------------------------------------------------------*/
html[it-hide-playlist='true'] ytd-playlist-panel-renderer#playlist,
/*--------------------------------------------------------------
# HIDE RELATED VIDEOS
--------------------------------------------------------------*/
html[it-related-videos='hidden'] #related,
html[it-related-videos='hidden'] #related #contents,
html[it-related-videos='hidden'] #related #dismissible,
html[it-related-videos='hidden'] #related > ytd-watch-next-secondary-results-renderer > #items,
html[data-page-type=video][it-related-videos='hidden'] ytd-compact-video-renderer,
html[data-page-type=video][it-related-videos='hidetabs'] #related #chips, 
html[it-hide-sidebar='true'] #related,
html[it-hide-sidebar='true'] #related > ytd-watch-next-secondary-results-renderer > #items,
html[it-hide-sidebar='true'] div#secondary div#panels,
html[it-hide-sidebar='true'] div#secondary div#donation-shelf {
	display: none !important
}

html[it-related-videos='collapsed'] #related > ytd-watch-next-secondary-results-renderer > #items:not([it-activated])::before {
	content: 'Show more' !important;
}

html[it-related-videos='collapsed'] #related > ytd-watch-next-secondary-results-renderer > #items[it-activated]::before {
	content: 'Show less' !important;
}

html[it-related-videos='collapsed'] #related > ytd-watch-next-secondary-results-renderer > #items::before {
	font-family: inherit !important;
	font-size: 1.6rem !important;
	font-weight: 400 !important;

	display: flex !important;

	width: 100% !important;
	height: 48px !important;
	margin: 0 !important;

	color: var(--yt-spec-text-primary) !important;
	border-bottom: 1px solid var(--yt-spec-10-percent-layer) !important;

	justify-content: center !important;
	align-items: center !important;
}

html[it-related-videos='collapsed'] #related > ytd-watch-next-secondary-results-renderer > #items:not([it-activated]) > * {
	visibility: hidden !important;
	pointer-events: none !important;
}
/* ... */

